<resources>
    <string name="app_name">Keove Cities</string>
    <string name="text_splash_screen">keove \n cities</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_log_in">Giriş yap</string>
    <string name="text_ask_account">Hesabın yok mu?</string>
    <string name="text_already_account">Zaten üye misin?</string>
    <string name="text_sign_in">Kaydol</string>
    <string name="text_user_name">Kullanıcı adı</string>
    <string name="text_password">Şifre</string>
    <string name="text_add_district">Ekle</string>

    <string-array name="names">
        <item>Şehirler</item>
        <item>Favoriler</item>
    </string-array>
</resources>