<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_outer_frame"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="50dp"
            android:text="@string/text_log_in"
            android:textColor="@color/lightBlue"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/text_user_name"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/textViewLogIn"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edit_text"
            android:textCursorDrawable="@drawable/edittext_cursor_drawable"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/text_password"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/userNameEdit"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:textCursorDrawable="@drawable/edittext_cursor_drawable"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/text_log_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/passwordEdit"
            android:layout_marginTop="30dp"
            android:background="@color/blue"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/logInBtn"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/accountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ask_account"
                app:layout_constraintLeft_toLeftOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/logInBtn"
                app:layout_constraintRight_toLeftOf="@id/signInText"
                android:textColor="@color/blue_opacity_50"
                android:textSize="14sp"
                android:layout_marginRight="30dp"/>
            <TextView
                android:id="@+id/signInText"
                android:onClick="signInClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_in"
                android:textColor="@color/blue"
                app:layout_constraintLeft_toRightOf="@id/accountText"
                app:layout_constraintTop_toBottomOf="@+id/logInBtn"
                app:layout_constraintRight_toLeftOf="@id/forwardImage"
                android:layout_marginRight="10dp"/>
            <ImageButton
                android:id="@+id/forwardImage"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/forward"
                android:scaleType="fitCenter"
                app:layout_constraintRight_toRightOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/logInBtn"
                app:layout_constraintLeft_toRightOf="@id/signInText"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>